--- a/pages/blog/2016-05-11-background-tasks-in-nodejs-a-survey-with-redis.mdx
+++ b/pages/blog/2016-05-11-background-tasks-in-nodejs-a-survey-with-redis.mdx
@@ -4,7 +4,8 @@ description: >-
   Today I gave a talk at RedisConf in San Francisco entitled: Background Tasks
   in Node.js: A survey with Redis.
 date: "2016-05-11T01:07:44.308Z"
-tags: []
+tags: [node.js, javascript, redis]
+image: /images/medium-export/1__o4crV68ZzYEiJ__l9zgqmXQ.png
 # slug: /@evantahler/background-tasks-in-node-js-a-survey-with-redis-971d3575d9d2
 ---
 
@@ -29,8 +30,7 @@ My favorite part of the presentation was building [Kafka](http://kafka.apache.or
 
 Supporting Code here:
 
-[**evantahler/background_jobs_node**
-\_background_jobs_node - Supporting code for the presentation_github.com](https://github.com/evantahler/background_jobs_node "https://github.com/evantahler/background_jobs_node")[](https://github.com/evantahler/background_jobs_node)
+[**evantahler/background_jobs_node**](https://github.com/evantahler/background_jobs_node)
 
 Thanks!
 
