--- a/pages/blog/2016-05-14-good-old-games-osx-resolution.mdx
+++ b/pages/blog/2016-05-14-good-old-games-osx-resolution.mdx
@@ -2,7 +2,8 @@
 title: "Good Old Games, Modern Resolutions, and Windows gaming on OSX"
 description: I’ve been itching for some nostalgic games lately.
 date: "2016-05-14T21:04:29.226Z"
-tags: []
+tags: [games, osx]
+image: /images/medium-export/1__EL__0uaqprD23nf__HtsqZFQ.jpeg
 # slug: >-
 #  /@evantahler/good-old-games-modern-resolutions-and-windows-gaming-on-osx-2974255cbc8d
 ---
