--- a/pages/blog/2016-05-16-actionhero-community-on-slack.mdx
+++ b/pages/blog/2016-05-16-actionhero-community-on-slack.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Actionhero Community: Now on Slack!"
-description: This week the Actionhero Community moved from Gitter to Slack.
+title: "Actionhero Community - Now on Slack"
+description: This week the Actionhero Community moved from Gitter to Slack
 date: "2016-05-16T04:06:56.640Z"
-tags: []
+tags: ["open source", actionhero]
+image: /images/medium-export/1__myDepyzyDisjRxKGEbj6tA.png
 # slug: /@evantahler/actionhero-community-now-on-slack-5394f7635619
 ---
 
@@ -15,17 +16,17 @@ The move was voted on by the community, and Slack won 4:1. Both tools are free f
 I’ve been in contact with the Gitter team for some time, and they have been wonderful to work with (and I \*think\* they might use parts of Actionhero to power Gitter). I wanted to share our reasons for leaving on our first day off of their platform:
 
 > re: [https://twitter.com/gitchat/status/728686013900558340](https://twitter.com/gitchat/status/728686013900558340)
-
+>
 > Hello Mike-
-
+>
 > You asked me to reach out and explain why the Actionhero community is moving from Gitter to Slack.
-
+>
 > Personally, it was a toss-up. I’m a been a happy member of a number of Slack channels/orgs for work, and I’ve also enjoyed my time with Gitter (since 2014!). I’ve had a number of conversations with your team, and you’ve all been very nice and helpful… and made a wonderful (free!) product.
-
+>
 > A few folks have been asking to move to Slack for some time, and if you check the last few days of our chat [\*in\* Gitter](https://gitter.im/evantahler/actionhero), I’ve pressed them to explain their reasons. Without any clear feature-differentiation, I think it really came down to "I already need to use Slack for work, I like it, and I don’t want to use more apps". A few folks wanted to have sub-channels (perhaps about a PR or topic), but I don’t know if out community is big enough to use it. However, we put it to a vote, and Slack won… so we are switching.
-
+>
 > The Socket.io team has a [good paradigm](http://rauchg.com/slackin/) for how to simplify the Slack signup flow for an open source project (which does requite you host a running login service) but they make it simple via Heroku.
-
+>
 > All of this said, I believe i’ve offered in the past to help with Gitter if I can, as I think you rely on many of the same technologies as Actionhero… and that offer still stands.
 
 After using Slack for the Actionhero community for a week, I’ve now found some \*real\* reasons why the platform is working better for the team. I wanted to share them here for other open-source projects which might be considering a similar thing.
@@ -70,4 +71,4 @@ In the week since we’ve moved to Slack, the number of chat messages has double
 
 While I was skeptical at first, the community was correct: **Utility really does increase by using a tool folks already have.**
 
-There are a few posts talking about how S[lack doesn’t work for large open-source _societies_](https://medium.freecodecamp.com/so-yeah-we-tried-slack-and-we-deeply-regretted-it-391bcc714c81#.kbxojwyny)_,_ but for now, at Actionhero’s current scale, I think we have found our home.
+There are a few posts talking about how [Slack doesn’t work for large open-source _societies_](https://medium.freecodecamp.com/so-yeah-we-tried-slack-and-we-deeply-regretted-it-391bcc714c81#.kbxojwyny)_,_ but for now, at Actionhero’s current scale, I think we have found our home.
