--- a/pages/blog/2012-02-15-pivotal-tracker-and-nerf-guns.mdx
+++ b/pages/blog/2012-02-15-pivotal-tracker-and-nerf-guns.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Pivotal Tracker, Phidgets, and Nerf Guns"
-description: "Update:"
+description: "Nerf Guns and Product Management"
 date: "15 Feb 2012"
 tags: ["javascript", "product management"]
 image: /images/medium-export/1__j7dGWlXBg__zVQtw0tHlE2A.jpeg
