--- a/pages/blog/2015-03-12-ansible-static-dynamic-inventory.mdx
+++ b/pages/blog/2015-03-12-ansible-static-dynamic-inventory.mdx
@@ -2,7 +2,7 @@
 title: Ansible Static Dynamic Inventory
 description: This entry is cross-posted from tech.taskrabbit.com
 date: "2015-03-12"
-tags: [taskrabbit, gitops]
+tags: [taskrabbit, gitops, ansible]
 image: /images/medium-export/1__MpJklbc7MeGNCgX3TvL1HQ.png
 # slug: /@evantahler/ansible-static-dynamic-inventory-808cab0a3678
 ---
