--- a/pages/blog/2015-03-12-rebuilding-capistrano-with-ansible.mdx
+++ b/pages/blog/2015-03-12-rebuilding-capistrano-with-ansible.mdx
@@ -2,7 +2,7 @@
 title: Rebuilding Capistrano with Ansible
 description: This entry is cross-posted from tech.taskrabbit.com
 date: "12 Mar 2015"
-tags: [ruby, gitops]
+tags: [ruby, gitops, ansible]
 image: /images/medium-export/1__w0iIGUfsxNXvUBKqrC__uSA.png
 # slug: /@evantahler/rebuilding-capistrano-with-ansible-a7dc582f669d
 ---
