--- a/pages/blog/2016-07-23-ansible-lets-encrypt-nginx-and-actionhero.mdx
+++ b/pages/blog/2016-07-23-ansible-lets-encrypt-nginx-and-actionhero.mdx
@@ -4,7 +4,7 @@ description: >-
   If you don’t already know LetsEncrypt! is an awesome project which aims to
   bring free HTTPS certificate to every site on the web. HTTPS…
 date: "2016-07-23T17:55:42.761Z"
-tags: [actionhero, "node.js", javascript]
+tags: [actionhero, "node.js", javascript, ansible]
 image: /images/medium-export/1__bKxD__GvU2YDGkBdZNhVXcQ.png
 # slug: /@evantahler/ansible-letsencrypt-nginx-and-actionhero-7be135fc6319
 ---
