all posts tagged

--- a/pages/blog/2011-11-02-agile-business-intelligence.mdx
+++ b/pages/blog/2011-11-02-agile-business-intelligence.mdx
@@ -4,7 +4,7 @@ description: >-
   A few months ago, Kate, Jenn, and I (all Modcloth co-workers) gave a talk at
   the world-famous pivotal labs about our unique "agile" way of…
 date: "2011-11-02"
-tags: ["product management"]
+tags: ["product management", modcloth]
 # slug: /@evantahler/agile-business-intelligence-pivotal-labs-271d1b72559e
 ---
 
