--- a/pages/blog/2011-12-03-the-webkit-console-is-rendered.mdx
+++ b/pages/blog/2011-12-03-the-webkit-console-is-rendered.mdx
@@ -4,7 +4,7 @@ description: >-
   I love doing web development in Chrome and Safari, as they have excellent
   built-in develop tools. There is one catch that I need to keep…
 date: "2011-12-03"
-tags: [chrome, javascript]
+tags: [chrome, javascript, modcloth]
 image: /images/medium-export/0__4Z9kHURSwJ720SdZ.jpeg
 # slug: >-
 #  /@evantahler/a-reminder-that-the-webkit-console-is-also-rendered-sometimes-6e74fa356cf3
