--- a/pages/blog/2012-01-27-unicorns.mdx
+++ b/pages/blog/2012-01-27-unicorns.mdx
@@ -4,7 +4,7 @@ description: >-
   At ModCloth, our website uses the Ruby on Rails framework, and we use the
   unicorn web server. When deploying code via Capistrano, we have a…
 date: "2012-01-27"
-tags: [ruby]
+tags: [ruby, modcloth]
 image: /images/medium-export/1__UQMJrkiUtHbA2W__e3__HSYg.jpeg
 # slug: /@evantahler/unicorns-web-servers-e9810136d75
 ---
