--- a/pages/blog/2012-02-01-unicorns-in-node.mdx
+++ b/pages/blog/2012-02-01-unicorns-in-node.mdx
@@ -4,7 +4,7 @@ description: >-
   At work the other day, an engineer most familiar with Ruby asked "What is the
   equivalent to Unicorn in Node?". Unicorn is a great…
 date: "2012-02-01"
-tags: ["node.js", "ruby", "devops"]
+tags: ["node.js", "ruby", "devops", taskrabbit, modcloth]
 image: /images/misc/unicorndies.jpg
 # slug: >-
 #  /@evantahler/unicorns-in-node-or-when-does-the-cluster-module-mater-cb6be89fcb93
