--- a/pages/blog/2012-02-15-pivotal-tracker-and-nerf-guns.mdx
+++ b/pages/blog/2012-02-15-pivotal-tracker-and-nerf-guns.mdx
@@ -2,7 +2,7 @@
 title: "Pivotal Tracker, Phidgets, and Nerf Guns"
 description: "Nerf Guns and Product Management"
 date: "15 Feb 2012"
-tags: ["javascript", "product management"]
+tags: ["javascript", product_management]
 image: /images/medium-export/1__j7dGWlXBg__zVQtw0tHlE2A.jpeg
 # slug: /@evantahler/pivotal-tracker-phidgets-and-nerf-guns-6b196a4254a0
 ---
