--- a/pages/blog/2013-03-10-api-first-reboot.mdx
+++ b/pages/blog/2013-03-10-api-first-reboot.mdx
@@ -4,7 +4,7 @@ description: >-
   After siting idle for over a year, Fiona (Fiona ODMC) and I have decided to
   reboot API-First.com.
 date: "2013-03-10"
-tags: ["product management"]
+tags: [product_management]
 image: /images/medium-export/1__ngHc__S43t468vMf7KDKpiw.jpeg
 # slug: /@evantahler/api-first-com-reboot-2ab3d526569f
 ---
