--- a/pages/blog/2013-03-19-when-does-api-first-not-apply.mdx
+++ b/pages/blog/2013-03-19-when-does-api-first-not-apply.mdx
@@ -2,7 +2,7 @@
 title: "When does API-First Not Apply?"
 description: This post is cross-posted from API-First.com
 date: "2013-03-19"
-tags: ["product management"]
+tags: [product_management]
 image: /images/medium-export/1__Df3z03ju7EPaTPnzqtCavw.jpeg
 # slug: /@evantahler/api-first-com-when-does-this-not-apply-872eb66bc0c2
 ---
