--- a/pages/blog/2013-10-14-on-inclusion.mdx
+++ b/pages/blog/2013-10-14-on-inclusion.mdx
@@ -2,7 +2,7 @@
 title: On Inclusion
 description: The topic of the day is inclusion.
 date: "2013-10-14"
-tags: ["open source"]
+tags: ["open_source"]
 # slug: /@evantahler/on-inclusion-1cc558c687d
 ---
 
