--- a/pages/blog/2016-01-09-switchboard-chat.mdx
+++ b/pages/blog/2016-01-09-switchboard-chat.mdx
@@ -2,7 +2,7 @@
 title: switchboard.chat
 description: "Today I want to announce the beta of a new website I built, switchboard.chat"
 date: "09 Jan 2016"
-tags: [actionhero, startups, product management]
+tags: [actionhero, startups, product_management]
 image: /images/medium-export/1__k7TOA8rMJW3wFmqxLyJsCw.png
 # slug: /@evantahler/switchboard-chat-d1aa51478dc6
 ---
