--- a/pages/blog/2016-05-16-actionhero-community-on-slack.mdx
+++ b/pages/blog/2016-05-16-actionhero-community-on-slack.mdx
@@ -2,7 +2,7 @@
 title: "Actionhero Community - Now on Slack"
 description: This week the Actionhero Community moved from Gitter to Slack
 date: "2016-05-16T04:06:56.640Z"
-tags: ["open source", actionhero]
+tags: ["open_source", actionhero]
 image: /images/medium-export/1__myDepyzyDisjRxKGEbj6tA.png
 # slug: /@evantahler/actionhero-community-now-on-slack-5394f7635619
 ---
