--- a/pages/blog/2016-08-07-actionhero-v15.mdx
+++ b/pages/blog/2016-08-07-actionhero-v15.mdx
@@ -4,7 +4,7 @@ description: >-
   A quick note to say that ActionHero has reached version 15. You can read the
   full release notes here.
 date: "2016-08-07T00:29:56.849Z"
-tags: ["actionhero", "open source", "javascript", "node.js"]
+tags: ["actionhero", "open_source", "javascript", "node.js"]
 image: /images/medium-export/1__0QCxQAd2jc1P8__yHWNWIUQ.png
 # slug: /@evantahler/actionhero-v15-0-0-and-release-cadence-ed22cfacc8b6
 ---
