--- a/pages/blog/2016-12-23-on-ethical-ad-supported-businesses.mdx
+++ b/pages/blog/2016-12-23-on-ethical-ad-supported-businesses.mdx
@@ -4,7 +4,7 @@ description: >-
   Listen to this wonderful interview on KQED (NPR)’s "Forum" with Dr. Tim Wu On
   Advertising, Fake News and ‘Attention Harvesting’
 date: "2016-12-23T19:59:19.838Z"
-tags: ["product management", "legal"]
+tags: [product_management, "legal"]
 image: /images/medium-export/1__JjPI1__tSIP__7rv5N0p__v9g.png
 # slug: /@evantahler/on-ethical-ad-supported-businesses-9c449d699217
 ---
