--- a/pages/blog/2017-03-23-scoreboard-guru-initial-release.mdx
+++ b/pages/blog/2017-03-23-scoreboard-guru-initial-release.mdx
@@ -2,7 +2,7 @@
 title: Scoreboard Guru Initial Release
 description: I’m happy to announce the initial release of Scoreboard Guru!
 date: "2017-03-23T03:35:46.268Z"
-tags: ["games", "product management"]
+tags: ["games", product_management]
 image: /images/medium-export/1__W__ZjnVPX889X__uzE9GXMmg.png
 # slug: /@evantahler/scoreboard-guru-initial-release-14aeec2c66bf
 ---
