--- a/pages/blog/2017-04-03-dont-be-a-jerk-oss.mdx
+++ b/pages/blog/2017-04-03-dont-be-a-jerk-oss.mdx
@@ -2,7 +2,7 @@
 title: Don't be a Jerk - The Open Source License
 description: A few years back, I was disappointed that so many open source licenses were opaque and hard to understand. So in 2011 I created a satirical license.
 date: "2017-04-03T18:09:02.461Z"
-tags: ["open source", "legal"]
+tags: ["open_source", "legal"]
 image: /images/medium-export/1__K59NnX6vCMF8__MRPKcvScg.png
 # slug: /@evantahler/dont-be-a-jerk-the-open-source-license-6d173629e6eb
 ---
