--- a/pages/blog/2018-06-22-customizable-other-option-in-google-forms.mdx
+++ b/pages/blog/2018-06-22-customizable-other-option-in-google-forms.mdx
@@ -2,7 +2,7 @@
 title: Customizable "Other" Option in Google Forms
 description: Hi Google!
 date: "2018-06-22T05:04:10.203Z"
-tags: ["product management", "voom", "accessability"]
+tags: [product_management, "voom", "accessability"]
 image: /images/medium-export/1__3rOVI36gT6fubqDUaEflhw.png
 # slug: /@evantahler/customizable-other-option-in-google-forms-2d0403f582b
 ---
