--- a/pages/blog/2018-10-09-tips-for-building-international-products.mdx
+++ b/pages/blog/2018-10-09-tips-for-building-international-products.mdx
@@ -4,7 +4,7 @@ description: >-
   Voom is an Airbus subsidiary working to make booking a helicopter as easy as
   booking a car… while we build out the infrastructure for the…
 date: "2018-10-09T01:07:17.646Z"
-tags: ["voom", "product management"]
+tags: ["voom", product_management]
 image: /images/medium-export/1__kPialmqAJFyZG3FCt1JC__A.jpeg
 # slug: >-
 #  /@evantahler/tips-for-building-international-products-and-companies-f800f96b9c31
