--- a/pages/blog/2019-03-02-the-voom-software-engineering-interview-process.mdx
+++ b/pages/blog/2019-03-02-the-voom-software-engineering-interview-process.mdx
@@ -4,7 +4,7 @@ description: >-
   Building an inclusive and efficient interview process for a pair-programming
   team
 date: "2019-03-21T00:03:45.682Z"
-tags: ["voom", "engineering", "engineering management", "hiring"]
+tags: ["voom", "engineering", "hiring"]
 image: /images/medium-export/1__9HNP1gUTyhHlUcbJBNYpgg.jpeg
 featured: true
 # slug: /@evantahler/the-voom-software-engineering-interview-process-a93eab6518ed
