--- a/pages/blog/2018-01-04-goodbye-scoreboard-guru.mdx
+++ b/pages/blog/2018-01-04-goodbye-scoreboard-guru.mdx
@@ -2,7 +2,7 @@
 title: Goodbye Scoreboard Guru
 description: Feb 1 Scoreboard Guru shuts down
 date: "2018-01-04T05:12:18.644Z"
-tags: ["games", "product management"]
+tags: ["games", product_management]
 image: /images/medium-export/1__E6ZIx0OxnxDZ6dWw4o10og.png
 # slug: /@evantahler/goodbye-scoreboard-guru-40daaaf18c0d
 ---
