--- a/pages/blog/2013-01-29-makara.mdx
+++ b/pages/blog/2013-01-29-makara.mdx
@@ -1,9 +1,10 @@
 ---
 title: Makara — a read-write splitting adapter for Active Record
-description: This entry is cross-posted from tech.taskrabbit.com
+description: A read-write splitting adapter for Active Record
 date: "2013-01-29"
 tags: [ruby, taskrabbit]
 image: /images/medium-export/0__PQJXKJGTtmUqMwGe.jpg
+canonical: https://tech.taskrabbit.com/blog/2013/01/02/makara/
 # slug: >-
 #  /@evantahler/makara-a-read-write-splitting-adapter-for-active-record-5142df310e44
 ---
