--- a/pages/blog/2013-03-19-when-does-api-first-not-apply.mdx
+++ b/pages/blog/2013-03-19-when-does-api-first-not-apply.mdx
@@ -1,6 +1,6 @@
 ---
 title: "When does API-First Not Apply?"
-description: This post is cross-posted from API-First.com
+description: When should you not use an API-First methodology?
 date: "2013-03-19"
 tags: [product_management]
 image: /images/medium-export/1__Df3z03ju7EPaTPnzqtCavw.jpeg
