--- a/pages/blog/2013-04-14-forklift-moving-big-databases-around-in-ruby.mdx
+++ b/pages/blog/2013-04-14-forklift-moving-big-databases-around-in-ruby.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Forklift: Moving Big Databases Around in Ruby"
-description: This entry is cross-posted from tech.taskrabbit.com
+description: Moving Big Databases Around in Ruby
 date: "2016-04-22T22:45:50.164Z"
-tags: [ruby, data]
+tags: [ruby, data, taskrabbit]
 image: /images/medium-export/0__T3e9y__efvaQCz99b.jpg
+canonical: https://tech.taskrabbit.com/blog/2013/04/12/forklift/
 # slug: /@evantahler/forklift-moving-big-databases-around-e999da2382ed
 ---
 
