--- a/pages/blog/2014-01-06-elasticdump.mdx
+++ b/pages/blog/2014-01-06-elasticdump.mdx
@@ -1,9 +1,10 @@
 ---
 title: ElasticDump
-description: Cross-Posted from tech.taskrabbit.com
+description: ElasticDump - The Node.js CLI tool for importing and exporting Elaticsearch data
 date: "2016-04-22T23:01:16.761Z"
 tags: [elasticsearch, node.js, javascript, taskrabbit]
 image: /images/medium-export/1__OopZJXTgMJhT1S0pBaGapQ.jpeg
+canonical: https://tech.taskrabbit.com/blog/2014/01/06/elasticsearch-dump/
 # slug: /@evantahler/elasticdump-43b54ae20f45
 ---
 
