--- a/pages/blog/2014-04-24-active-record-mysql-and-emoji.mdx
+++ b/pages/blog/2014-04-24-active-record-mysql-and-emoji.mdx
@@ -1,8 +1,9 @@
 ---
 title: "active_record, MySQL, and emoji"
-description: cross-posted from tech.taskrabbit.com
+description: No more Emoji!
 date: "2014-04-24"
 tags: [taskrabbit, ruby]
+canonical: https://tech.taskrabbit.com/blog/2014/04/24/active-record-mysql-and-emoji/
 # slug: /@evantahler/active-record-mysql-and-emoji-ab18cbf0ce7c
 ---
 
