--- a/pages/blog/2014-07-18-elasticsearch-in-production.mdx
+++ b/pages/blog/2014-07-18-elasticsearch-in-production.mdx
@@ -1,9 +1,10 @@
 ---
 title: ElasticSearch in Production
-description: This is cross-posted from tech.taskrabbit.com
+description: Fast and Stable Elasticsearch
 date: "2014-07-18"
 tags: [taskrabbit, elasticsearch]
 image: /images/medium-export/0__snWdTeknvk2Ksn5W.png
+canonical: https://tech.taskrabbit.com/blog/2014/07/18/elasticsearch-in-production/
 # slug: /@evantahler/elasticsearch-in-production-ada34b550e1b
 ---
 
