--- a/pages/blog/2014-08-27-statusbot.mdx
+++ b/pages/blog/2014-08-27-statusbot.mdx
@@ -1,8 +1,9 @@
 ---
 title: StatusBot
-description: This is cross-posted from tech.taskrabbit.com
+description: Keep track of your uptime with Statuspage.io and Node.js
 date: "27 Aug 2014"
-tags: [node.js]
+tags: [node.js, taskrabbit]
+canonical: https://tech.taskrabbit.com/blog/2014/08/27/statusbot/
 image: /images/medium-export/0__DrCJJqCWSpAOEpNu.png
 # slug: /@evantahler/statusbot-bf8fbc32b3b9
 ---
