--- a/pages/blog/2015-01-07-elasticseach-production-notes-part-2.mdx
+++ b/pages/blog/2015-01-07-elasticseach-production-notes-part-2.mdx
@@ -1,9 +1,10 @@
 ---
 title: "ElasticSeach Production Notes: Part 2"
-description: This was cross-posted from tech.tsakrabbit.com
+description: "Fast and Stable Elasticsearch in production... again!"
 date: "2015-01-07"
 tags: [taskrabbit, elasticsearch]
 image: /images/medium-export/0__SnPDTeQgntuVKyK9.png
+canonical: https://tech.taskrabbit.com/blog/2015/01/07/elasticsearch-production-notes-part-2/
 # slug: /@evantahler/elasticseach-production-notes-part-2-89463686483a
 ---
 
