--- a/pages/blog/2012-12-20-delete-old-git-branches.mdx
+++ b/pages/blog/2012-12-20-delete-old-git-branches.mdx
@@ -1,9 +1,10 @@
 ---
 title: Delete old git branches already merged into master
-description: This entry is cross-posted from tech.taskrabbit.com
+description: Keep your git branches clean!
 date: "2012-12-20"
-tags: [git, ruby]
+tags: [git, ruby, taskrabbit]
 image: /images/medium-export/1__HArdB4tMciWUivKfh4XWxg.jpeg
+canonical: https://tech.taskrabbit.com/blog/2013/01/03/clean_git_branches/
 # slug: /@evantahler/delete-old-git-branches-already-merged-into-master-7af33fc6245d
 ---
 
