--- a/pages/blog/2015-03-12-ansible-static-dynamic-inventory.mdx
+++ b/pages/blog/2015-03-12-ansible-static-dynamic-inventory.mdx
@@ -1,9 +1,10 @@
 ---
 title: Ansible Static Dynamic Inventory
-description: This entry is cross-posted from tech.taskrabbit.com
+description: Using Ansible with a Dynamic list of hosts
 date: "2015-03-12"
 tags: [taskrabbit, gitops, ansible]
 image: /images/medium-export/1__MpJklbc7MeGNCgX3TvL1HQ.png
+canonical: https://tech.taskrabbit.com/blog/2015/03/12/ansible-dynamic-static-inventory/
 # slug: /@evantahler/ansible-static-dynamic-inventory-808cab0a3678
 ---
 
