--- a/pages/blog/2015-03-12-rebuilding-capistrano-with-ansible.mdx
+++ b/pages/blog/2015-03-12-rebuilding-capistrano-with-ansible.mdx
@@ -1,9 +1,10 @@
 ---
 title: Rebuilding Capistrano with Ansible
-description: This entry is cross-posted from tech.taskrabbit.com
+description: Solid Ruby deployments with Ansbile
 date: "12 Mar 2015"
-tags: [ruby, gitops, ansible]
+tags: [ruby, gitops, ansible, taskrabbit]
 image: /images/medium-export/1__w0iIGUfsxNXvUBKqrC__uSA.png
+canonical: https://tech.taskrabbit.com/blog/2015/03/12/rebuilding-capistrano-with-ansible/
 # slug: /@evantahler/rebuilding-capistrano-with-ansible-a7dc582f669d
 ---
 
