adding grouparoo posts

--- a/pages/blog/2018-12-31-repeat-rate.mdx
+++ b/pages/blog/2018-12-31-repeat-rate.mdx
@@ -2,7 +2,7 @@
 title: "Repeat Rate: What are you Actually Measuring?"
 description: Second-Order Measurements and your Product
 date: "2018-12-31T18:46:35.181Z"
-tags: [product_management, "voom"]
+tags: [product_management, "voom", marketing]
 image: /images/medium-export/1__XYGVsmFM9b0lnRDHJHfOyQ.jpeg
 # slug: /@evantahler/repeat-rate-what-are-you-actually-measuring-ddc3ad49ba04
 ---
