--- a/pages/blog/2021-06-11-heroku-slack-notifications.mdx
+++ b/pages/blog/2021-06-11-heroku-slack-notifications.mdx
@@ -2,7 +2,7 @@
 title: Heroku Slack Notifications
 description: Get a Slack notification when your Heroku App Deploys!
 date: "2021-06-11"
-tags: [heroku, gitops, grouparoo]
+tags: [heroku, gitops, grouparoo, voom]
 featured: false
 image: /images/posts/2021-06-11-heroku-slack-notifications/slack.png
 ---
