more grouparoo posts

--- a/pages/blog/2020-10-16-typescript-frontend-backend.mdx
+++ b/pages/blog/2020-10-16-typescript-frontend-backend.mdx
@@ -5,6 +5,7 @@ author: "Evan Tahler"
 description: "Use Typescript to more tightly couple your React apps to your API"
 image: "/images/posts/2020-10-16-typescript-frontend-backend/keyboard.jpeg"
 tags: [grouparoo, node.js, react, typescript, engineering]
+featured: true
 ---
 
 <Image
