--- a/pages/blog/2012-02-07-give-travisci-money.mdx
+++ b/pages/blog/2012-02-07-give-travisci-money.mdx
@@ -4,7 +4,7 @@ description: >-
   Travis CI is raising money to keep their free community continues integration
   server up and running. This is an awesome service which I use…
 date: "2012-02-07"
-tags: [open source]
+tags: [open_source]
 image: /images/medium-export/1__u4zG6GFiZMoQd__LfW23W0g.png
 # slug: /@evantahler/travis-ci-is-raising-money-give-them-money-c674c1f8a37b
 ---
