--- a/pages/blog/2019-09-30-actionhero-for-real-time-games.mdx
+++ b/pages/blog/2019-09-30-actionhero-for-real-time-games.mdx
@@ -2,7 +2,7 @@
 title: Actionhero for Real-time Games — The Illustrated Actionhero Community Q&A
 description: Introducing to the Actionhero Illustrated Community Q&A!
 date: "2019-09-30T17:30:35.077Z"
-tags: ["actionhero", "nodejs", "javascript", "typescript"]
+tags: ["actionhero", "node.js", "javascript", "typescript"]
 image: /images/medium-export/1__fpDBDrYAMXpsSd7Ooykw6A.png
 # slug: >-
 #  /@evantahler/actionhero-for-real-time-games-the-illustrated-actionhero-community-q-a-44c138e840e
