--- a/pages/blog/2019-10-07-failing-a-task.mdx
+++ b/pages/blog/2019-10-07-failing-a-task.mdx
@@ -2,7 +2,7 @@
 title: Failing a Task —  The Illustrated Actionhero Community Q&A
 description: Welcome to the second installment of The Illustrated Actionhero Community Q&A!
 date: "2019-10-07T15:28:44.426Z"
-tags: ["actionhero", "nodejs", "javascript", "typescript"]
+tags: ["actionhero", "node.js", "javascript", "typescript"]
 image: /images/medium-export/1__KMPhTzPQSR1js3sK__FZebw.png
 # slug: >-
 #  /@evantahler/failing-a-task-the-illustrated-actionhero-community-q-a-b46b63bf5cc0
