--- a/pages/blog/2019-10-15-online-offline-sync.mdx
+++ b/pages/blog/2019-10-15-online-offline-sync.mdx
@@ -2,7 +2,7 @@
 title: Online and Offline Sync — The Illustrated Actionhero Community Q&A
 description: Welcome to the third installment of The Illustrated Actionhero Community Q&A!
 date: "2019-10-15T16:57:43.330Z"
-tags: ["actionhero", "nodejs", "javascript", "typescript"]
+tags: ["actionhero", "node.js", "javascript", "typescript"]
 image: /images/medium-export/1__G93TtL608iyLjBzns6aWyA.png
 # slug: >-
 #  /@evantahler/online-and-offline-sync-the-illustrated-actionhero-community-q-a-c768513dd378
