--- a/pages/blog/2019-10-21-actions-tasks-and-destructured-params.mdx
+++ b/pages/blog/2019-10-21-actions-tasks-and-destructured-params.mdx
@@ -2,7 +2,7 @@
 title: Actions, Tasks, and Destructured Params- The Illustrated Actionhero Community QA
 description: Welcome to the fourth installment of The Illustrated Actionhero Community Q&A!
 date: "2019-10-21T16:23:42.121Z"
-tags: ["actionhero", "javascript", "nodejs", "typescript"]
+tags: ["actionhero", "javascript", "node.js", "typescript"]
 image: /images/medium-export/1__phVzjPGTY__ky66bFEsDnEw.png
 # slug: >-
 #  /@evantahler/actions-tasks-and-destructured-params-the-illustrated-actionhero-community-q-a-a3128f41b2ee
