--- a/pages/blog/2020-05-07-grouparoo-monorepo-deployment.mdx
+++ b/pages/blog/2020-05-07-grouparoo-monorepo-deployment.mdx
@@ -3,7 +3,7 @@ title: "Continuous Deployment for NPM Packages"
 date: "2020-05-07"
 description: "Grouparoo leverages the Node.js and NPM ecosystems to manage distribution to our customers. Our open-source software is distributed via the public via NPM"
 image: "/images/posts/2020-05-07-grouparoo-monorepo-deployment/grouparoo-release-process.png"
-tags: [grouparoo, node, typescript]
+tags: [grouparoo, node.js, typescript]
 canonical: https://www.grouparoo.com/blog/grouparoo-monorepo-deployment
 ---
 
