--- a/pages/blog/2021-05-14-varchar-191.mdx
+++ b/pages/blog/2021-05-14-varchar-191.mdx
@@ -63,7 +63,7 @@ The way `innodb` MySQL databases worked was that you can only have 767 bytes for
 
 [^1]: "International" is an odd way to talk about the languages that most of the world uses, specifically those using non-Latin characters. However, operating systems and databases had thoroughly english-centric origins, and the legacy of those early choices is still rippling though our code today.
 [^2]: Throughout this post, I've use the word "character" rather than "letter", and this is why - depending on your language, each character in a string might be a letter, a whole word, or even a pictogram like an emoji.
-[^3]: "To Honk" (like from a car) - https://words.hk/zidin/%F0%A0%BC%AD
+[^3]: "To Honk" (like from a car) - [source](https://words.hk/zidin/%F0%A0%BC%AD)
 
 ## Today
 
